Expanded Cheat Menu:
Code cleanup

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,4 +1,6 @@
 ID,Text,Translation
+302535920000912,Penalty,
+302535920000917,,
 302535920001269,,
 302535920001270,,
 302535920001271,,
@@ -34,6 +36,7 @@ ID,Text,Translation
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
 302535920000104,Expanded CM,
+302535920000914,Current capacity,
 302535920001266,Broked Transport Pathing,
 302535920000367,Mod Upload,
 302535920000236,Mod Editor,
@@ -154,7 +157,7 @@ If you can delete it and still get this error; please send it and this log to th
 302535920000018,Don't use the colour picker: Numbers range from -255 to 255.,
 302535920000019,"Single colour for object (this colour will interact with the other colours).
 If you want to change the colour of an object you can't with 1-4 (like drones).",
-302535920000020,Colour is set on,
+302535920000020,Colour is set on %s.,
 302535920000022,"If number is 8421504 (0 for Metallic/Roughness) then you probably can't change that colour.
 
 The colour picker doesn't work for Metallic/Roughness.
@@ -165,7 +168,7 @@ You can copy and paste numbers if you want (click item again after picking).",
 302535920000026,if they're there; resets to default colours.,
 302535920000027,Nothing selected,
 302535920000028,Find Resource,
-302535920000029,Error: Cannot find any,
+302535920000029,Error: Cannot find any %s.,
 302535920000032,Select a resource to find,
 302535920001257,Auto-refresh list every second.,
 302535920001239,Functions,
@@ -248,15 +251,15 @@ Double click selected item to open in new manipulator.",
 302535920000102,Use to change values of selected list item.,
 302535920000103,Edit Value,
 302535920000105,Set Food Storage,
-302535920000107,"I must not fear. Fear is the mind-killer. Fear is the little-death that brings total obliteration.
+302535920000107,": I must not fear. Fear is the mind-killer. Fear is the little-death that brings total obliteration.
 I will face my fear. I will permit it to pass over me and through me.
 And when it has gone past I will turn the inner eye to see its path.
 Where the fear has gone there will be nothing. Only I will remain.",
 302535920000108,Select a building with a protect_range (MDSLaser/DefenceTower).,
 302535920000109,Protect,
-302535920000113,range is now,
+302535920000113,%s range is now %s.,
 302535920000114,Set Protection Radius,
-302535920000116,Buildings unlocked,
+302535920000116,Buildings unlocked: %s,
 302535920000117,Unlock Buildings,
 302535920000118,Pick the buildings you want to unlock (use Ctrl/Shift for multiple).,
 302535920000119,: Is that a rocket in your pocket?,
@@ -268,7 +271,7 @@ Where the fear has gone there will be nothing. Only I will remain.",
 302535920000124,Charge,
 302535920000125,Discharge,
 302535920000127,Rate,
-302535920000128,rate is now,
+302535920000128,%s rate is now: %s,
 302535920000130,Dis/Charge Rates,
 302535920000131,Current rate,
 302535920000132,Change charge rate,
@@ -279,24 +282,31 @@ Going down, down.
 Working in a coal mine.
 Whew, about to slip down.",
 302535920000136,"Select something that produces (air,water,electricity,other).",
-302535920000137,Production is now,
+302535920000137,%s production is now: %s,
 302535920000139,Production Amount,
 302535920000140,Current production,
 302535920000141,Select a building with workers.,
-302535920000143,I presume the PM's in favour of the scheme because it'll reduce unemployment.,
+302535920000143,: I presume the PM's in favour of the scheme because it'll reduce unemployment.,
 302535920000144,Automated Performance,
 302535920000145,"Sets performance of all automated buildings
 Current",
 302535920000147,Only apply to selected object instead of all,
-302535920000148,"You keep your work station so clean, Jerome.
+302535920000148,": You keep your work station so clean, Jerome.
 It's next to godliness. Isn't that what they say?",
-302535920000149,There's more vodka in this piss than there is piss.,
+302535920000149,: There's more vodka in this piss than there is piss.,
 302535920000150,: Good for what ails you,
 302535920000151,: The spice must flow!,
-302535920000152,": All right, pussy, pussy, pussy! Come on in pussy lovers! Here at the Titty Twister we're slashing pussy in half! Give us an offer on our vast selection of pussy, this is a pussy blow out! All right, we got white pussy, black pussy, Spanish pussy, yellow pussy, we got hot pussy, cold pussy, we got wet pussy, we got... smelly pussy, we got hairy pussy, bloody pussy, we got snappin' pussy, we got silk pussy, velvet pussy, Naugahyde pussy, we even got horse pussy, dog pussy, chicken pussy! Come on, you want pussy, come on in, pussy lovers! If we don't got it, you don't want it! Come on in, pussy lovers!",
-302535920000153,"So, er, we the crew of the Eagle 5, if we do encounter, make first contact with alien beings, it is a friendship greeting from the children of our small but great planet of Potatoho.",
+302535920000152,": Pussy, pussy, pussy! Come on in Pussy lovers! Here at the Titty Twister we’re slashing pussy in half! Give us an offer on our vast selection of pussy! This is a pussy blow out!
+Alright, we got white pussy, black pussy, spanish pussy, yellow pussy. We got hot pussy, cold pussy. We got wet pussy. We got smelly pussy. We got hairy pussy, bloody pussy. We got snapping pussy. We got silk pussy, velvet pussy, naugahyde pussy. We even got horse pussy, dog pussy, chicken pussy.
+C'mon, you want pussy, come on in Pussy Lovers! If we don’t got it, you don't want it! Come on in Pussy lovers!Attention pussy shoppers!
+Take advantage of our penny pussy sale! If you buy one piece of pussy at the regular price, you get another piece of pussy of equal or lesser value for only a penny!
+Try and beat pussy for a penny! If you can find cheaper pussy anywhere, fuck it!",
+302535920000153,": So, er, we the crew of the Eagle 5, if we do encounter, make first contact with alien beings,
+it is a friendship greeting from the children of our small but great planet of Potatoho.",
 302535920000154,: Get yourself a beautiful showhome (even if it falls apart after you move in),
-302535920000155,"We were all feeling a bit shagged and fagged and fashed, it having been an evening of some small energy expenditure, O my brothers. So we got rid of the auto and stopped off at the Korova for a nightcap.",
+302535920000155,": We were all feeling a bit shagged and fagged and fashed,
+it having been an evening of some small energy expenditure, O my brothers.
+So we got rid of the auto and stopped off at the Korova for a nightcap.",
 302535920000156,: Aliens? We gotta deal with aliens too?,
 302535920000158,: No no I said over there.,
 302535920000159,": Unlimited Wonders
@@ -1062,7 +1072,7 @@ Max: 100000 (choose fill to reset),
 
 Warning: Disable births or else...",
 302535920000838,Colonist Move Speed,
-302535920000839,Colonist gravity is now,
+302535920000839,Colonist gravity is now %s.,
 302535920000840,Set Colonist Gravity,
 302535920000842,Select a workplace.,
 302535920000843,Toggled traits,
@@ -1130,28 +1140,27 @@ For rules separate with spaces: Hunger Twister (or leave blank for none).",
 302535920000908,: You know what they say about leaky pipes,
 302535920000909,"If you set this amount larger then a building's ""Storage"" amount then the drones will NOT pick up storage (See: Fixes>Drone Carry Amount).",
 302535920000910,Somewhere above 1000 will delete the save (when it's full),
-302535920000911,Drones can carry,
-302535920000912,items.,
+302535920000911,Drones can carry %s items.,
 302535920000913,Set Drone Carry Capacity,
-302535920000914,Current capacity,
 302535920000915,Max: 1000.,
-302535920000916,DroneHubs can control,
-302535920000917,drones.,
+302535920000916,DroneHubs can control %s drones.,
 302535920000918,Set DroneHub Drone Capacity,
-302535920000919,RC gravity is now,
+302535920000919,RC gravity is now %s.,
 302535920000920,Set RC Gravity,
-302535920000921,RC Rovers can control,
+302535920000921,RC Rovers can control %s drones.,
 302535920000923,Set Drone Gravity,
 302535920000924,Set RC Rover Drone Capacity,
 302535920000925,somewhere above 2000 will delete the save (when it's full),
-302535920000926,RC Transport capacity is now,
+302535920000926,RC Transport capacity is now %s.,
 302535920000927,Set RC Transport Capacity,
 302535920000928,somewhere above 1000 may delete the save (when it's full),
-302535920000929,Shuttle storage is now,
+302535920000929,Shuttle storage is now %s.,
 302535920000930,Set Cargo Shuttle Capacity,
-302535920000931,Shuttle speed is now,
+302535920000931,Shuttle speed is now %s.,
 302535920000932,Set Cargo Shuttle Speed,
-302535920000934,ShuttleHub shuttle capacity is now,
+302535920000934,ShuttleHub shuttle capacity is now %s.,
+302535920001191,%s %s prefabs have been added.,
+302535920001192,Prefabs,
 302535920000936,Something you'd like to see added?,
 302535920000937,Laggy with lots of colonists.,
 302535920000940,Select something to monitor.,
@@ -1170,10 +1179,10 @@ For rules separate with spaces: Hunger Twister (or leave blank for none).",
 302535920000953,Set Colonist Capacity,
 302535920000954,You need to select a building that has workers.,
 302535920000956,for colonist capacity: Above a thousand is laggy (above 60K may crash).,
-302535920000957,Capacity is now,
+302535920000957,%s capacity is now %s.,
 302535920000958,You need to select a building that has capacity.,
 302535920000959,You need to select something that has space for visitors.,
-302535920000960,visitor capacity is now,
+302535920000960,%s visitor capacity is now %s.,
 302535920000961,Visitor Capacity,
 302535920000962,"Max capacity limited to:
 Universal: 2,500,
@@ -1378,7 +1387,7 @@ Not permanent for colonists after they exit buildings (for now).",
 302535920001160,"Damage? Total, sir.
 It's what we call a global killer.
 The end of mankind. Doesn't matter where it hits. Nothing would survive, not even bacteria.",
-302535920001161,Sponsor for this save is now,
+302535920001161,Sponsor for this save is now %s.,
 302535920001162,Sponsor,
 302535920001166,Bonuses,
 302535920001167,Use Ctrl/Shift for multiple bonuses.,
@@ -1387,7 +1396,7 @@ The end of mankind. Doesn't matter where it hits. Nothing would survive, not eve
 302535920001170,Turn off selected bonuses (defaults to turning on).,
 302535920001171,Turn All Off,
 302535920001172,Turns off all bonuses.,
-302535920001173,Commander for this save is now,
+302535920001173,Commander for this save is now %s.,
 302535920001174,Commander,
 302535920001177,Logo,
 302535920001178,Set New Logo,
@@ -1401,8 +1410,6 @@ The end of mankind. Doesn't matter where it hits. Nothing would survive, not eve
 302535920001188,: om nom nom nom nom,
 302535920001189,Passengers,
 302535920001190,Set Food Per Rocket Passenger,
-302535920001191,prefabs have been added.,
-302535920001192,Prefabs,
 302535920001194,Use edit box to enter amount of prefabs to add.,
 302535920001195,(Reset to 500 M),
 302535920001196,"If your funds are a negative value, then you added too much.
