Expanded Cheat Menu: Code cleanup
Terraformer:
Added Delete All Rocks

ExpandedCheatMenu@choggi.org

--- a/Mods ChoGGi/Terraformer/changes.txt
+++ b/Mods ChoGGi/Terraformer/changes.txt
@@ -1,3 +1,5 @@
+v0.4
+Added Remove All Rocks: Press Ctrl-Shift-F to show a confirmation dialog.
 v0.3
 Fixed issue with pipes getting marked as uneven terrain.
 v0.2
