"math." Functions: Fixed: math.fmod, math.modf, math.log, math.random(n). More unit testing. Removed lua.exe, and added a link instead (https://github.com/HazeProductions/Lua-x64).
ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1488,3 +1488,12 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920000692,Log is blank (well not anymore).,
 302535920000477,Clear out the windowed console log.,
 302535920000865,Toggle Trans,
+302535920010000,math.%s not implemented yet.,
+302535920010001,bad argument #%s to 'math.%s' (%s),
+302535920010002,zero,
+302535920010003,less than or equals zero,
+302535920010004,less than zero,
+302535920010005,arg#2 - arg#1 == less than zero,
+302535920010006,Testing math: Start,
+302535920010007,Testing math: End,
+302535920010008,Testing math: Error file: (%s) line number: (%s) val1: (%s) val2: (%s) func: (math.%s),
