--- a/Mods ChoGGi/math. functions/changes.txt
+++ b/Mods ChoGGi/math. functions/changes.txt
@@ -1,3 +1,8 @@
+v0.4
+v0.3
+Fixed: math.fmod, math.modf, math.log, math.random(n).
+More unit testing.
+Removed lua.exe, and added a link instead (https://github.com/HazeProductions/Lua-x64).
 v0.2
 More type checking.
 Errors when input is NaN (instead of returning "-nan(ind)").
