Expanded Cheat Menu:
Changed:
Less func calls when building the cheats menu.
The Traits functions in Colonists were missing the "other" traits (thanks Nacira).

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,9 +1,5 @@
 ID,Text,Translation
-302535920000966,,
-302535920000965,,
-302535920000992,,
-302535920001040,,
-302535920001050,,
+302535920000803,,
 302535920001053,,
 302535920001057,,
 302535920001094,,
@@ -146,8 +142,8 @@ ID,Text,Translation
 302535920001154,Displays the log text in a window you can copy sections from.,
 302535920000563,Copy Log Text,
 302535920000201,Active,
-302535920000001,"F2 to toggle cheats menu, and F9 to clear this text.
-Press ~ or Enter and click the ""Console"" button to toggle this console history.",
+302535920000001,"F2 to toggle Cheats Menu (Ctrl-F2 for Cheats Pane), and F9 to clear console log text.
+Press ~ or Enter and click the ""Console"" button to toggle showing console log history.",
 302535920000013,This shouldn't happen... Well shit something's bork bork bork.,
 302535920000002,Dumped,
 302535920000003,Can't dump nothing,
@@ -880,7 +876,7 @@ Not noticeable unless using higher zoom.",
 302535920000654,Select (or mouse over) an object to follow.,
 302535920000655,Toggle Cursor,
 302535920000656,Toggle between moving camera and selecting objects.,
-302535920001264,"Show list of mods to upload to Steam Workshop.",
+302535920001264,Show list of mods to upload to Steam Workshop.,
 302535920001242,Edit ECM Settings File,
 302535920001243,Manually edit ECM settings.,
 302535920000875,Game Functions,
@@ -940,6 +936,9 @@ AddMaintenancePnts, MakeSphereTarget, Malfunction, SpawnWorker, SpawnVisitor",
 302535920000701,Queue up to 100 squares.,
 302535920000702,Game Speed,
 302535920000703,"Change the game speed (only for medium/fast, normal is normal).",
+302535920000966,"Set the occurrence level of %s disasters.
+Current: %s",
+302535920000965,"Change the ""Game Rules"".",
 302535920000704,Instant Mission Goal,
 302535920000705,"Mission goals are finished instantly (pretty sure the only difference is preventing a msg).
 
@@ -972,6 +971,7 @@ restart to set disabled.",
 302535920000732,"Childkiller: You evil, evil person.",
 302535920000733,Open a preset in the editor.,
 302535920000735,Timer delay skipped,
+302535920000992,Building Traits,
 302535920000912,Penalty,
 302535920000736,"%s: Whoops somebody broke the rocket, guess you're stuck on mars.",
 302535920000737,%s: Water? Like out of the toilet?,
@@ -1051,8 +1051,7 @@ Until tomorrow, you know I'm free to roam.",
 302535920000798,The Happy Place,
 302535920000799,In Time,
 302535920000801,Set Death Age,
-302535920000802,Usual age is around,
-302535920000803,. This doesn't stop colonists from becoming seniors; just death (research ForeverYoung for enternal labour).,
+302535920000802,Usual age is around %s. This doesn't stop colonists from becoming seniors; just death (research ForeverYoung for enternal labour).,
 302535920000804,No lazy good fer nuthins round here,
 302535920000805,Warning: Child will remove specialization.,
 302535920000808,How the game normally works,
@@ -1078,6 +1077,8 @@ Until tomorrow, you know I'm free to roam.",
 302535920000824,All the positive traits...,
 302535920000825,All Negative Traits,
 302535920000826,All the negative traits...,
+302535920001040,All Other Traits,
+302535920001050,All the other traits...,
 302535920000828,All the traits...,
 302535920000829,Random: Each colonist gets three positive and three negative traits (if it picks same traits then you won't get all six).,
 302535920000832,Check to remove traits,
@@ -1091,13 +1092,13 @@ Warning: Disable births or else...",
 302535920000838,Colonist Move Speed,
 302535920000839,Colonist gravity is now %s.,
 302535920000840,Set Colonist Gravity,
-302535920000842,Select a workplace.,
+302535920000842,Select a workplace or training building.,
 302535920000843,Toggled traits,
 302535920000844,Fired workers,
 302535920000846,For,
 302535920000847,Select traits and click Ok to toggle status.,
 302535920000848,Fire Workers,
-302535920000849,Will also fire workers with the traits from all,
+302535920000849,Will also fire workers with the traits from all %s.,
 302535920001222,Age,
 302535920001229,Last Meal,
 302535920001235,Last Rest,
@@ -1412,10 +1413,10 @@ The end of mankind. Doesn't matter where it hits. Nothing would survive, not eve
 302535920001174,Commander,
 302535920001177,Logo,
 302535920001178,Set New Logo,
-302535920001179,occurrence is now,
+302535920001179,%s occurrence is now: %s,
 302535920001180,Disaster Occurrences,
 302535920001181,Rules,
-302535920001182,Set Rules,
+302535920001182,Set Game Rules,
 302535920001185,Add selected rules,
 302535920001186,Remove selected rules,
 302535920001187,Add Probes,
@@ -1426,7 +1427,7 @@ The end of mankind. Doesn't matter where it hits. Nothing would survive, not eve
 302535920001195,(Reset to 500 M),
 302535920001196,"If your funds are a negative value, then you added too much.
 Fix with: %s",
-302535920001198,Resouce Filled,
+302535920001198,Resource Filled,
 302535920000005,Drops a new colonist in selected dome.,
 302535920001246,Changes colour of %s back to default.,
 302535920000885,Permanently delete %s,
