--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,5 +1,4 @@
 ID,Text,Translation
-302535920000803,,
 302535920001053,,
 302535920001057,,
 302535920001094,,
@@ -1120,11 +1119,9 @@ Sounds like a broked save; send me the file and I'll take a look",
 302535920000862,Object Spawner (EntityData list),
 302535920000863,Objects are unselectable with mouse cursor (hover mouse over and use Delete Object).,
 302535920000866,Set MissionParams NewMap,
-302535920000867,"Attention: You must close this dialog for these settings to take effect on new map!
+302535920000867,"Attention: You must press ""OK"" for these settings to take effect before choosing a map!
 
-See the list on the left for ids.
-
-For rules separate with spaces: Hunger Twister (or leave blank for none).",
+See the examine list on the left for ids.",
 302535920000868,Choose map with settings presets:,
 302535920000869,"This %s doesn't have GetPath function, something is probably borked.",
 302535920000871,Doesn't seem to be an object that moves.,
@@ -1214,6 +1211,7 @@ Mechanized: 1,000,000",
 302535920000970,Removed unreachable,
 302535920000971,Sites,
 302535920000972,Buildings attached.,
+302535920000803,For rules separate with spaces: Hunger ColonyPrefab (or leave blank for none).,
 302535920000110,Min,
 302535920000941,Max,
 302535920000973,Change Terrain Texture,
