Expanded Cheat Menu:
Changed:
Translates strings when the mod is loaded instead of when they're needed.

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,4 +1,5 @@
 ID,Text,Translation
+302535920000806,,
 302535920000068,,
 302535920001094,,
 302535920001121,,
@@ -80,7 +81,7 @@ ID,Text,Translation
 302535920000063,unknown name,
 302535920000074,Cancel without changing anything.,
 302535920000084,Auto-Refresh,
-302535920000090,Error opening,
+302535920000090,Error opening: %s,
 302535920000106,Current,
 302535920000111,Cover the entire map from the centre.,
 302535920000112,Cover the entire map from a corner.,
@@ -106,7 +107,7 @@ ID,Text,Translation
 302535920000753,Will only apply to selected colonist.,
 302535920000769,Selected,
 302535920000834,Max,
-302535920000841,Current gravity,
+302535920000841,Current gravity: %s,
 302535920000933,Current speed,
 302535920000982,Custom,
 302535920001079,Enable,
@@ -144,10 +145,9 @@ ID,Text,Translation
 302535920000001,"F2 to toggle Cheats Menu (Ctrl-F2 for Cheats Pane), and F9 to clear console log text.
 Press ~ or Enter and click the ""Console"" button to toggle showing console log history.",
 302535920000013,This shouldn't happen... Well shit something's bork bork bork.,
-302535920000002,Dumped,
+302535920000002,Dumped: %s,
 302535920000003,Can't dump nothing,
-302535920000041,Add new entry to,
-302535920000138,(Defaults to name/value of selected item).,
+302535920000041,Add new entry to %s (Defaults to name/value of selected item).,
 302535920000165,or,
 302535920000166,BROKEN FUNCTION,
 302535920000353,Scripts,
@@ -165,7 +165,7 @@ If you can delete it and still get this error; please send it and this log to th
 302535920000967,Nothing selected.,
 302535920000968,Collisions,
 302535920000969,Collisions %s on %s,
-302535920000012,Error borked building,
+302535920000012,Error borked building: %s,
 302535920000015,Can't colour object,
 302535920000017,Use the colour picker (dbl right-click for instant change).,
 302535920000018,Don't use the colour picker: Numbers range from -255 to 255.,
@@ -232,7 +232,7 @@ Which you can then mess around with some more in the console.",
 302535920000072,Paste or type code to be executed here.,
 302535920000073,Exec and close dialog (Enter can also be used).,
 302535920000075,Insert Obj,
-302535920000076,At caret position inserts,
+302535920000076,At caret position inserts: ChoGGi.CurObj,
 302535920000077,"You can enter a custom value to be applied.
 
 Warning: Entering the wrong value may crash the game or otherwise cause issues.",
@@ -303,7 +303,7 @@ Whew, about to slip down.",
 I presume the PM's in favour of the scheme because it'll reduce unemployment.",
 302535920000144,Automated Performance,
 302535920000145,"Sets performance of all automated buildings
-Current",
+Current: %s",
 302535920000147,Only apply to selected object instead of all,
 302535920000148,"%s:
 You keep your work station so clean, Jerome.
@@ -376,8 +376,7 @@ I trust you are not in too much distress.",
 302535920000195,"Set production of buildings of selected type, also applies to newly placed ones.
 Works on any building that produces.",
 302535920000196,Fully Automated Building,
-302535920000197,"Work without workers (select a building and this will apply to all of type or selected).
-Thanks to BoehserOnkel for the idea.",
+302535920000197,Work without workers (select a building and this will apply to all of type or selected).,
 302535920000198,Sanatoriums Cure All,
 302535920000199,"Toggle curing all traits (use ""Show All Traits"" & ""Show Full List"" to manually set).",
 302535920000200,Schools Train All,
@@ -636,7 +635,7 @@ Works after colonist idle.",
 Not permanent.",
 302535920000447,Change the age at which colonists die.,
 302535920000448,"I'm afraid it could be 9/11 times 1,000.",
-302535920000874,(see Path Markers to mark more than one at a time),
+302535920000874,(see Path Markers to mark more than one at a time).,
 302535920000864,Delete All Rocks,
 302535920001208,Export Colonist Data To CSV,
 302535920001219,Exports data about colonists to AppData/Colonists.csv,
@@ -1012,7 +1011,8 @@ Current Pool Size: %s",
 302535920000770,"
 Look at them, bloody Catholics, filling the bloody world up with bloody people they can't afford to bloody feed.",
 302535920000771,Set the minimum comfort needed for birth,
-302535920000772,The mill's closed. There's no more work. We're destitute. I'm afraid I have no choice but to sell you all for scientific experiments.,
+302535920000772,"%s:
+The mill's closed. There's no more work. We're destitute. I'm afraid I have no choice but to sell you all for scientific experiments.",
 302535920000773,%s: I just love findin' subversives.,
 302535920000774,Make All Renegades,
 302535920000775,Remove All Renegades,
@@ -1054,7 +1054,6 @@ Until tomorrow, you know I'm free to roam.",
 302535920000805,Warning: Child will remove specialization.,
 302535920000808,How the game normally works,
 302535920000809,Only set as male or female,
-302535920000806,Colonists,
 302535920000807,Colonist Age,
 302535920000810,Colonist Gender,
 302535920000813,Colonist Specialization,
@@ -1114,7 +1113,7 @@ Sounds like a broked save; send me the file and I'll take a look",
 302535920000858,Idx,
 302535920000859,Anim State,
 302535920000860,Set Anim State,
-302535920000861,Current State,
+302535920000861,Current State: %s,
 302535920000862,Object Spawner (EntityData list),
 302535920000863,Objects are unselectable with mouse cursor (hover mouse over and use Delete Object).,
 302535920000866,Set MissionParams NewMap,
@@ -1223,7 +1222,7 @@ Some settings can't be changed in the editor, but you can manually add them in t
 302535920000978,Make it stay at selected light model till reboot (use Misc>Change Light Model for Permanent).,
 302535920000980,Opens up the list of premade styles so you can start with the settings from one.,
 302535920000981,Choose to this remove Permanent setting.,
-302535920000983,"Custom Lightmodel made with ""Change Light Model Custom""",
+302535920000983,"Custom Lightmodel made with ""Change Light Model Custom"".",
 302535920000984,Lighting,
 302535920000985,Select Lightmodel Preset,
 302535920000986,Change Lightmodel,
@@ -1311,7 +1310,7 @@ CheatMenuModSettings.lua > DisableECM to re-enable them.",
 302535920001070,Restart to take effect.,
 302535920001072,"Are you sure you want to reset ECM settings?
 
-Old settings are saved as",
+Old settings are saved as %s.",
 302535920001074,"Sign, sign, everywhere a sign.
 Blockin' out the scenery, breakin' my mind.
 Do this, don't do that, can't you read the sign?",
@@ -1322,6 +1321,7 @@ Do this, don't do that, can't you read the sign?",
 If there isn't a status then it's likely a list of options to choose from
 
 For any issues; please report them to my Github/Steam/NexusMods page, or email %s",
+302535920000138,"surface, subsurface, and terrain deposits visible.",
 302535920001255,Will only apply to objects in the same dome as selected object.,
 302535920001256,Will only apply to selected object.,
 302535920000347,Star Dome,
@@ -1338,7 +1338,7 @@ For any issues; please report them to my Github/Steam/NexusMods page, or email %
 302535920001093,Toggled: %s pinnable objects.,
 302535920001095,Auto Remove Items From Pin List,
 302535920001096,Auto Unpinned,
-302535920001097,Enter a class name (s.class) to add a custom entry.,
+302535920001097,Enter a class name (SelectedObj.class) to add a custom entry.,
 302535920001098,Add to list,
 302535920001099,Add these items to the unpin list.,
 302535920001100,Remove from list,
@@ -1385,11 +1385,11 @@ For any issues; please report them to my Github/Steam/NexusMods page, or email %
 302535920001148,Rocket Regular,
 302535920001149,Combat Rover,
 302535920001150,PumpStation Demo,
-302535920001151,Set Entity For,
+302535920001151,Set Entity For %s,
 302535920001153,"Post a request if you want me to add more entities from EntityData (use ex(EntityData) to list).
 
 Not permanent for colonists after they exit buildings (for now).",
-302535920001155,Set Entity Scale For,
+302535920001155,Set Entity Scale For %s,
 302535920001156,Current object,
 302535920001157,If you don't pick a checkbox it will change all of selected type.,
 302535920001158,Mission goal,
