Expanded Cheat Menu:
Changed:
Missed some text.

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1041,7 +1041,7 @@ Other: 20,000,
 Waste: 1,000,000,
 Mechanized: 1,000,000",
 302535920000963,Size,
-302535920001094,"Shows a list of all cargo and allows you to change the price, weight taken up, and how many per click.",
+302535920001094,"Shows a list of all cargo and allows you to change the price, weight taken up, if it's locked from view, and how many per click.",
 302535920000554,Select an object and click this to display a list of resources.,
 302535920000556,Shows a list of updated information about your city.,
 302535920000557,Launch Empty Rocket,
