Expanded Cheat Menu:
Added:
Debug>Delete Saved Games: Shows a list of saved games, and allows you to delete more than one at a time.

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,9 +1,4 @@
 ID,Text,Translation
-302535920000146,,
-302535920001273,,
-302535920001274,,
-302535920001275,,
-302535920001276,,
 302535920001277,,
 302535920001278,,
 302535920001279,,
@@ -31,6 +26,7 @@ ID,Text,Translation
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
 302535920000104,Expanded CM,
+302535920001167,Use Ctrl/Shift for multiple selection.,
 302535920000855,Last chance before deletion!,
 302535920000800,MaleOrFemale,
 302535920000613,Drone Carry Amount,
@@ -790,6 +786,11 @@ Works after colonist idle.",
 Not permanent.",
 302535920000447,Change the age at which colonists die.,
 302535920000448,"I'm afraid it could be 9/11 times 1,000.",
+302535920001276,Nothing is deleted unless you check this.,
+302535920000146,Delete Saved Games,
+302535920001273,"Shows a list of saved games, and allows you to delete more than one at a time.",
+302535920001274,This is permanent!,
+302535920001275,Deleted %s saved games.,
 302535920000467,Path Markers,
 302535920001175,Debug FX,
 302535920000453,Reload Lua,
@@ -1452,7 +1453,6 @@ The end of mankind. Doesn't matter where it hits. Nothing would survive, not eve
 302535920001161,Sponsor for this save is now %s.,
 302535920001162,Sponsor,
 302535920001166,Bonuses,
-302535920001167,Use Ctrl/Shift for multiple bonuses.,
 302535920001168,Modded ones are mostly ignored for now (just cargo space/research points).,
 302535920001169,Turn Off,
 302535920001170,Turn off selected bonuses (defaults to turning on).,
