--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,5 +1,5 @@
 ID,Text,Translation
-302535920001277,,
+302535920001277,SteamFileExists,
 302535920001278,,
 302535920001279,,
 302535920001280,,
@@ -206,7 +206,7 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920000239,Tools,
 302535920000228,Assign to,
 302535920000069,Examine,
-302535920000043,Scrolls to text entered (press Enter to scroll between found text, Up arrow to scroll to top).,
+302535920000043,"Scrolls to text entered (press Enter to scroll between found text, Up arrow to scroll to top).",
 302535920000044,Go to text,
 302535920000045,"Scrolls down one line or scrolls between text in ""Go to text"".
 
