Expanded Cheat Menu:
Fixed:
Missing some strings for Instant Research.
Menu setting text wasn't updating.

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,6 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001278,,
-302535920001279,,
 302535920001280,,
 302535920001281,,
 302535920001282,,
@@ -423,6 +421,8 @@ Use with Remove Building Limits to fill up a dome with spires.",
 Doesn't work with domes.",
 302535920000230,Remove Building Limits,
 302535920000231,"Buildings can be placed almost anywhere (I left uneven terrain blocked, and pipes don't like domes).",
+302535920001278,Instant Research,
+302535920001279,Instantly research anything you click.,
 302535920000305,Research Queue Size,
 302535920000266,Spawn,
 302535920000295,Add Research Points,
